--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "Gobble",
   "version": "0.0.1",
   "dependencies": {
-    "grunt": "~1.0.0",
-    "grunt-contrib-watch": "~1.0.0",
-    "grunt-contrib-compass": "~1.1.1",
-    "grunt-contrib-uglify": "~2.0.0",
-    "angular": "~1.5.7",
-    "jquery": "~2.2.4",
-    "bootstrap": "~3.3.6"
+    "grunt": "1.x",
+    "grunt-contrib-watch": "1.x",
+    "grunt-contrib-compass": "1.x",
+    "grunt-contrib-uglify": "2.x",
+    "matchdep": "1.x",
+    "angular": "1.x",
+    "jquery": "2.x",
+    "bootstrap": "3.x"
   }
 }
